hard-gists/5b17c9f37f351780744aefc74f93d3ae/run.log
=== Docker Run Log for 5b17c9f37f351780744aefc74f93d3ae ===
Started at: Mi 29. Okt 16:13:27 CET 2025

[2025-10-29 16:13:27] START: Running container for 5b17c9f37f351780744aefc74f93d3ae
[2025-10-29 16:13:28] SUCCESS: Container a1f5e1927cdda4a872027d49a484a0661adf710c38833d4dda4b0977cfb35ce5 started for 5b17c9f37f351780744aefc74f93d3ae
=== Container logs for 5b17c9f37f351780744aefc74f93d3ae ===
  File "/snippet.py", line 84
    print "ROC:", round(roc,3)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5b17c9f37f351780744aefc74f93d3ae ===
[2025-10-29 16:13:30] INFO: Container a1f5e1927cdda4a872027d49a484a0661adf710c38833d4dda4b0977cfb35ce5 has stopped
